--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^2.3.0
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.0.1
   firebase_core: ^1.3.0
 
 dev_dependencies:
