--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,14 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   cloud_firestore: ^2.3.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.0.1
   firebase_core: ^1.3.0
+  firebase_storage: ^10.0.1
+  flutter:
+    sdk: flutter
+  image_picker: ^0.8.3
 
 dev_dependencies:
   flutter_test:
@@ -42,9 +44,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/nouser.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
