--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.3
+  firebase_messaging: 7.0.3
+
 
 dev_dependencies:
   flutter_test:
